projects/vb6parse/snapshots/parsers/cst/module_options/option_statements/option_base_with_line_continuation.snap
---
source: projects/vb6parse/tests/module_options/option_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: OptionStatement
      children:
        - kind: OptionKeyword
          text: Option
        - kind: Whitespace
          text: " "
        - kind: Underscore
          text: _
        - kind: Newline
          text: "\n"
        - kind: BaseKeyword
          text: Base
        - kind: Whitespace
          text: " "
        - kind: IntegerLiteral
          text: "1"
        - kind: Newline
          text: "\n"
