projects/vb6parse/snapshots/parsers/cst/module_options/option_statements/option_compare_case_insensitive.snap
---
source: projects/vb6parse/tests/module_options/option_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: OptionStatement
      children:
        - kind: OptionKeyword
          text: OPTION
        - kind: Whitespace
          text: " "
        - kind: CompareKeyword
          text: COMPARE
        - kind: Whitespace
          text: " "
        - kind: BinaryKeyword
          text: BINARY
        - kind: Newline
          text: "\n"
