projects/vb6parse/snapshots/parsers/cst/module_options/option_statements/option_compare_preserves_whitespace.snap
---
source: projects/vb6parse/tests/module_options/option_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: OptionStatement
      children:
        - kind: OptionKeyword
          text: Option
        - kind: Whitespace
          text: " "
        - kind: CompareKeyword
          text: Compare
        - kind: Whitespace
          text: " "
        - kind: BinaryKeyword
          text: Binary
        - kind: Whitespace
          text: "  "
        - kind: Newline
          text: "\n"
